--- a/app/src/main/res/layout/add_gas_station_constraint.xml
+++ b/app/src/main/res/layout/add_gas_station_constraint.xml
@@ -58,7 +58,9 @@
 
             android:text="Petrol"
             app:chipStrokeWidth="2dp"
-            android:id="@+id/chip2" tools:layout_editor_absoluteY="196dp" tools:layout_editor_absoluteX="8dp"/>
+            android:id="@+id/chip2" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
+            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"/>
     <com.google.android.material.chip.Chip
             style="@style/Widget.MaterialComponents.Chip.Filter"
             android:layout_width="wrap_content"
@@ -98,8 +100,10 @@
             android:id="@+id/textInputLayout3"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/chip2"
-            app:layout_constraintStart_toStartOf="@+id/chip2" app:layout_constraintEnd_toStartOf="@+id/diasel_layout"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp">
+            app:layout_constraintEnd_toStartOf="@+id/diasel_layout"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp">
 
 
         <com.google.android.material.textfield.TextInputEditText
@@ -147,8 +151,8 @@
             android:id="@+id/gas_layout"
             app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
             app:layout_constraintStart_toEndOf="@+id/diasel_layout" android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="21dp"
-            android:layout_marginRight="21dp">
+            android:layout_marginLeft="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp">
 
 
         <com.google.android.material.textfield.TextInputEditText
@@ -171,6 +175,6 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
-            app:layout_constraintHorizontal_bias="0.919" android:layout_marginBottom="44dp"
+            app:layout_constraintHorizontal_bias="0.919" android:layout_marginBottom="32dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
