update gas_station_list_view style

--- a/app/src/main/res/layout/gas_station_list_view.xml
+++ b/app/src/main/res/layout/gas_station_list_view.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tablayout"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorTransparent"
             android:minHeight="?attr/actionBarSize"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
@@ -47,7 +47,6 @@
 
 
     </LinearLayout>
-
 
 </LinearLayout>
 
