--- a/app/src/main/res/layout/gas_station_list_item.xml
+++ b/app/src/main/res/layout/gas_station_list_item.xml
@@ -66,7 +66,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
     <View android:layout_width="match_parent"
           android:layout_height="1dp"
-          android:background="#000"
+          android:background="#F0F0F0"
     />
 
 </LinearLayout>
