Finish implementing initial navigation

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
 
     <style name="AppTheme.Launcher">
         <!-- Customize your theme here. -->
-        <item name="android:windowBackground">@drawable/launch_screen</item>
+        <!--<item name="android:windowBackground">@drawable/launch_screen</item>-->
     </style>
 
     <style name="Widget.PrayerTimes.FABlikeButton" parent="@style/Widget.MaterialComponents.Button">
