--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph" app:startDestination="@id/gasStationListFragment">
+            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph" app:startDestination="@id/mapFragment">
 
     <fragment
-            android:id="@+id/nav_host_fragment"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/gasStationListFragment"
+            android:name="com.ktu.nearfuel.views.fragments.GasStationListFragment"
+            android:label="gas_station_list_view"
+            tools:layout="@layout/gas_station_list_view"
+    />
+    <fragment
+            android:id="@+id/addStationFragment" android:name="com.ktu.nearfuel.views.fragments.AddStationFragment"
+            android:label="AddStationFragment"
+            tools:layout="@layout/add_gas_station_constraint"/>
+    <fragment
+            android:id="@+id/mapFragment" android:name="com.ktu.nearfuel.views.fragments.MapFragment"
+            android:label="MapFragment"
+            tools:layout = "@layout/map_fragment">
 
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/nav_graph" />
-    <fragment android:id="@+id/gasStationListFragment"
-              android:name="com.ktu.nearfuel.views.fragments.GasStationListFragment"
-              android:label="gas_station_list_view"/>
+        <action android:id="@+id/action_mapFragment_to_addStationFragment"
+                app:destination="@id/addStationFragment"/>
+
+        <action android:id="@+id/action_mapFragment_to_gasStationListFragment"
+                app:destination="@id/gasStationListFragment"/>
+    </fragment>
 
 </navigation>
