--- a/app/src/main/res/layout/gas_station_list_item.xml
+++ b/app/src/main/res/layout/gas_station_list_item.xml
@@ -20,7 +20,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="22sp"
-                tools:text="15km"
+                android:text="15km"
                 app:layout_constraintEnd_toStartOf="@+id/textView"
                 android:layout_margin="10dp"
                 android:textColor="#000"
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="22sp"
-                tools:text="1.11$"
+                android:text="1.11$"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_margin="10dp"
                 app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"
@@ -43,7 +43,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Neste"
+                android:text="Neste"
                 android:textSize="22sp"
                 android:textColor="#000"
                 android:layout_margin="10dp"
