--- a/app/src/main/res/layout/gas_station_list_view.xml
+++ b/app/src/main/res/layout/gas_station_list_view.xml
@@ -6,7 +6,8 @@
         android:layout_width="match_parent" android:layout_height="match_parent"
         android:orientation="vertical"
 
-        tools:menu="@menu/stations_list_menu">
+        tools:menu="@menu/stations_list_menu"
+        >
 
 
     <com.google.android.material.tabs.TabLayout
@@ -15,7 +16,8 @@
             android:id="@+id/tablayout"
             android:background="@color/colorPrimary"
             android:minHeight="?attr/actionBarSize"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:elevation="8px">
 
         <com.google.android.material.tabs.TabItem
                 android:text="@string/petrol"
