Add empty settings fragment

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -24,6 +24,13 @@
 
         <action android:id="@+id/action_mapFragment_to_gasStationListFragment"
                 app:destination="@id/gasStationListFragment"/>
+        <action android:id="@+id/action_mapFragment_to_settingsFragment" app:destination="@id/settingsFragment"/>
     </fragment>
+
+    <fragment
+            android:id="@+id/settingsFragment"
+            android:name="com.ktu.nearfuel.views.fragments.SettingsFragment"
+            android:label="@string/settings"
+            tools:layout = "@layout/settings_fragment"/>
 
 </navigation>
