--- a/app/src/main/res/layout/gas_station_list_item.xml
+++ b/app/src/main/res/layout/gas_station_list_item.xml
@@ -21,13 +21,15 @@
                 android:layout_height="wrap_content"
                 android:textSize="22sp"
                 android:text="15km"
-                app:layout_constraintEnd_toStartOf="@+id/textView"
+                app:layout_constraintEnd_toStartOf="@+id/list_item_price"
                 android:layout_margin="10dp"
                 android:textColor="#000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:id="@+id/textView2" app:layout_constraintStart_toEndOf="@+id/textView3"
-                android:layout_marginStart="8dp" android:layout_marginLeft="8dp"/>
+                android:id="@+id/list_item_distance"
+                app:layout_constraintStart_toEndOf="@+id/list_item_title"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"/>
 
         <TextView
                 android:layout_width="wrap_content"
@@ -37,7 +39,8 @@
                 android:text="1.11$"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_margin="10dp"
-                app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"
+                app:layout_constraintTop_toTopOf="parent"
+                android:id="@+id/list_item_price"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
         <TextView
@@ -49,7 +52,8 @@
                 android:layout_margin="10dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
-                app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/textView3"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/list_item_title"/>
 
         <ImageView
                 android:layout_width="35dp"
