--- a/app/src/main/res/layout/item_list_fragment.xml
+++ b/app/src/main/res/layout/item_list_fragment.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <LinearLayout
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
-        <include android:id="@+id/item1" layout="@layout/gas_station_list_item"/>
-        <include android:id="@+id/item2" layout="@layout/gas_station_list_item"/>
-        <include android:id="@+id/item3" layout="@layout/gas_station_list_item"/>
-        <include android:id="@+id/item4" layout="@layout/gas_station_list_item"/>
-        <include android:id="@+id/item5" layout="@layout/gas_station_list_item"/>
-
-
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:id="@+id/recycler_view"
+    />
 
 
 </LinearLayout>
