--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -14,5 +14,15 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
+    <com.google.android.gms.maps.MapView android:layout_width="match_parent"
+                                         android:id="@+id/map_view"
+                                         android:layout_height="match_parent"
+                                         app:layout_constraintTop_toTopOf="parent"
+                                         app:layout_constraintStart_toStartOf="parent"
+                                         app:layout_constraintEnd_toEndOf="parent"
+                                         app:layout_constraintBottom_toBottomOf="parent"
+    ></com.google.android.gms.maps.MapView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
