--- a/app/src/main/res/layout/add_gas_station_constraint.xml
+++ b/app/src/main/res/layout/add_gas_station_constraint.xml
@@ -134,7 +134,7 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Diasel"/>
+                android:hint="Diesel"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
