--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -54,7 +54,7 @@
                 android:padding="12dp"
                 android:text="@string/login"/>
 
-        <TextView android:id="@+id/link_signup"
+        <TextView android:id="@+id/link_sign_up"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="24dp"
