--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -20,7 +20,7 @@
                    android:layout_gravity="center_horizontal" />
 
         <!--  Name Label -->
-        <com.google.android.material.textfield.TextInputLayout
+        <!--<com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -30,7 +30,7 @@
                       android:layout_height="wrap_content"
                       android:inputType="textCapWords"
                       android:hint="@string/username" />
-        </com.google.android.material.textfield.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>-->
 
         <!-- Email Label -->
         <com.google.android.material.textfield.TextInputLayout
