--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -55,6 +55,15 @@
                 android:padding="12dp"
                 android:text="@string/login"/>
 
+        <com.facebook.login.widget.LoginButton
+                android:id="@+id/btn_facebook_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
+                android:padding="12dp"/>
+
         <TextView android:id="@+id/link_sign_up"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
