--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -12,7 +12,7 @@
             android:paddingRight="24dp"
             android:focusableInTouchMode="true">
 
-        <ImageView android:src="@drawable/logo"
+        <ImageView android:src="@drawable/nearfuel"
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:layout_marginBottom="24dp"
