--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -14,6 +14,9 @@
         <item
                 android:id="@+id/settings"
                 android:title="Settings" />
+        <item
+            android:id="@+id/sign_out"
+            android:title="Sign out" />
 
     </group>
 
