Add progress bar and splash screen.

--- a/app/src/main/res/drawable/launch_screen.xml
+++ b/app/src/main/res/drawable/launch_screen.xml
@@ -11,7 +11,7 @@
     <item>
 
         <bitmap
-                android:src="@drawable/logo"
+                android:src="@drawable/splash_screen_icon"
                 android:gravity="center"/>
 
     </item>
