--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -9,11 +9,13 @@
             android:id="@+id/add_gas_station"
             android:layout_width="59dp"
             android:layout_height="wrap_content"
+            android:src="@drawable/ic_add_white_24dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+    />
     <com.google.android.gms.maps.MapView android:layout_width="match_parent"
                                          android:id="@+id/map_view"
                                          android:layout_height="match_parent"
