--- a/app/src/main/res/layout/add_gas_station_constraint.xml
+++ b/app/src/main/res/layout/add_gas_station_constraint.xml
@@ -25,7 +25,7 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Enter the title"/>
+                android:hint="Title"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -47,7 +47,7 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Enter the address"/>
+                android:hint="Address"/>
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.chip.Chip
             style="@style/Widget.MaterialComponents.Chip.Filter"
@@ -68,7 +68,7 @@
             android:minWidth="80dp"
             android:textAlignment="center"
 
-            android:text="Diasel"
+            android:text="Diesel"
             app:chipStrokeWidth="2dp"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
             android:id="@+id/chip3"
@@ -109,7 +109,9 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Petrol"/>
+                android:inputType="numberDecimal"
+                android:hint="Petrol"
+        />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -134,7 +136,9 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Diesel"/>
+                android:hint="Diesel"
+                android:inputType="numberDecimal"
+        />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -158,7 +162,9 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Gas"/>
+                android:hint="Gas"
+                android:inputType="numberDecimal"
+        />
     </com.google.android.material.textfield.TextInputLayout>
 
 
