--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -10,9 +10,11 @@
             android:layout_width="59dp"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_add_white_24dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginRight="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
     />
@@ -23,7 +25,8 @@
                                          app:layout_constraintStart_toStartOf="parent"
                                          app:layout_constraintEnd_toEndOf="parent"
                                          app:layout_constraintBottom_toBottomOf="parent"
-    ></com.google.android.gms.maps.MapView>
+                                         app:layout_constraintHorizontal_bias="0.0"
+                                         app:layout_constraintVertical_bias="1.0"/>
 
 
 
