--- a/app/src/main/res/layout/add_gas_station_constraint.xml
+++ b/app/src/main/res/layout/add_gas_station_constraint.xml
@@ -60,7 +60,7 @@
             app:chipStrokeWidth="2dp"
             android:id="@+id/chip2" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
-            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"/>
+            app:layout_constraintStart_toStartOf="@+id/fuel_layout"/>
     <com.google.android.material.chip.Chip
             style="@style/Widget.MaterialComponents.Chip.Filter"
             android:layout_width="wrap_content"
@@ -97,7 +97,7 @@
             app:boxStrokeColor="@color/colorAccent"
             app:boxStrokeWidth="4dp"
             app:errorEnabled="true"
-            android:id="@+id/textInputLayout3"
+            android:id="@+id/fuel_layout"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/chip2"
             app:layout_constraintEnd_toStartOf="@+id/diasel_layout"
@@ -126,9 +126,9 @@
             app:boxStrokeWidth="4dp"
             app:errorEnabled="true"
             android:id="@+id/diasel_layout"
-            app:layout_constraintTop_toTopOf="@+id/textInputLayout3"
-            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
-            app:layout_constraintStart_toEndOf="@+id/textInputLayout3" android:layout_marginLeft="8dp"
+            app:layout_constraintTop_toTopOf="@+id/fuel_layout"
+            app:layout_constraintBottom_toBottomOf="@+id/fuel_layout"
+            app:layout_constraintStart_toEndOf="@+id/fuel_layout" android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/gas_layout"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp">
 
@@ -153,7 +153,7 @@
             app:boxStrokeWidth="4dp"
             app:errorEnabled="true"
             android:id="@+id/gas_layout"
-            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
+            app:layout_constraintBottom_toBottomOf="@+id/fuel_layout"
             app:layout_constraintStart_toEndOf="@+id/diasel_layout" android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp">
@@ -169,7 +169,7 @@
 
 
     <com.google.android.material.button.MaterialButton
-            android:id="@+id/fab_qibla"
+            android:id="@+id/confirm_edit"
             style="@style/Widget.PrayerTimes.FABlikeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
