Add two more filters

--- a/app/src/main/res/menu/stations_list_menu.xml
+++ b/app/src/main/res/menu/stations_list_menu.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Sort 1" android:id="@+id/sort1"/>
-    <item android:title="Sort 2" android:id="@+id/sort2"/>
-    <item android:title="Sort 3" android:id="@+id/sort3"/>
-    <item android:title="Sort 4" android:id="@+id/sort4"/>
+    <item android:title="Sort by price" android:id="@+id/sort1"/>
+    <item android:title="Filter unknown price" android:id="@+id/sort2"/>
+    <item android:title="Reset filters" android:id="@+id/sort3"/>
 
 </menu>
