--- a/app/src/main/res/layout/gas_station_list_item.xml
+++ b/app/src/main/res/layout/gas_station_list_item.xml
@@ -19,24 +19,9 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="22sp"
-                android:text="15km"
-                app:layout_constraintEnd_toStartOf="@+id/list_item_price"
-                android:layout_margin="10dp"
-                android:textColor="#000"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:id="@+id/list_item_distance"
-                app:layout_constraintStart_toEndOf="@+id/list_item_title"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"/>
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:textColor="@color/colorBaseGreen"
                 android:textSize="22sp"
-                android:text="1.11$"
+                tools:text="1.11$"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_margin="10dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -44,16 +29,18 @@
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
         <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Neste"
+                tools:text="Neste"
                 android:textSize="22sp"
                 android:textColor="#000"
                 android:layout_margin="10dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:id="@+id/list_item_title"/>
+                android:id="@+id/list_item_title"
+                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/list_item_price"
+                android:layout_marginRight="8dp"/>
 
         <ImageView
                 android:layout_width="35dp"
