--- a/app/src/main/res/layout/gas_station_list_item.xml
+++ b/app/src/main/res/layout/gas_station_list_item.xml
@@ -36,7 +36,7 @@
                 android:textColor="#000"
                 android:layout_margin="10dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintStart_toEndOf="@+id/img_maps"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:id="@+id/list_item_title"
                 android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/list_item_price"
@@ -49,7 +49,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:id="@+id/imageView"
+                android:id="@+id/img_maps"
                 android:layout_margin="10dp"/>
 
 
