--- a/app/src/main/res/layout/add_gas_station_constraint.xml
+++ b/app/src/main/res/layout/add_gas_station_constraint.xml
@@ -20,7 +20,7 @@
             android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp" android:id="@+id/textInputLayout">
+            android:layout_marginStart="8dp" android:id="@+id/ti_title">
 
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -42,7 +42,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:id="@+id/textInputLayout2">
+            app:layout_constraintTop_toBottomOf="@+id/ti_title" android:id="@+id/ti_address">
 
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -59,7 +59,7 @@
             android:text="Petrol"
             app:chipStrokeWidth="2dp"
             android:id="@+id/chip2" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
+            app:layout_constraintTop_toBottomOf="@+id/ti_address"
             app:layout_constraintStart_toStartOf="@+id/fuel_layout"/>
     <com.google.android.material.chip.Chip
             style="@style/Widget.MaterialComponents.Chip.Filter"
@@ -70,7 +70,7 @@
 
             android:text="Diesel"
             app:chipStrokeWidth="2dp"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
+            app:layout_constraintTop_toBottomOf="@+id/ti_address"
             android:id="@+id/chip3"
             android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/diasel_layout"/>
     <com.google.android.material.chip.Chip
@@ -82,7 +82,7 @@
 
             android:text="Gas"
             app:chipStrokeWidth="2dp"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
+            app:layout_constraintTop_toBottomOf="@+id/ti_address"
             android:id="@+id/chip4"
             android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/gas_layout"
     />
