--- a/app/src/main/res/layout/edit_station_prices.xml
+++ b/app/src/main/res/layout/edit_station_prices.xml
@@ -25,6 +25,7 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:focusable="false"
                 android:hint="Title"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -47,6 +48,7 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:focusable="false"
                 android:hint="Address"/>
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.chip.Chip
@@ -58,7 +60,7 @@
 
             android:text="Petrol"
             app:chipStrokeWidth="2dp"
-            android:id="@+id/chip2" android:layout_marginTop="16dp"
+            android:id="@+id/chip_petrol" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/ti_address"
             app:layout_constraintStart_toStartOf="@+id/fuel_layout"/>
     <com.google.android.material.chip.Chip
@@ -71,7 +73,7 @@
             android:text="Diesel"
             app:chipStrokeWidth="2dp"
             app:layout_constraintTop_toBottomOf="@+id/ti_address"
-            android:id="@+id/chip3"
+            android:id="@+id/chip_diesel"
             android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/diasel_layout"/>
     <com.google.android.material.chip.Chip
             style="@style/Widget.MaterialComponents.Chip.Filter"
@@ -83,7 +85,7 @@
             android:text="Gas"
             app:chipStrokeWidth="2dp"
             app:layout_constraintTop_toBottomOf="@+id/ti_address"
-            android:id="@+id/chip4"
+            android:id="@+id/chip_gas"
             android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/gas_layout"
     />
     <com.google.android.material.textfield.TextInputLayout
@@ -99,7 +101,7 @@
             app:errorEnabled="true"
             android:id="@+id/fuel_layout"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/chip2"
+            app:layout_constraintTop_toBottomOf="@+id/chip_petrol"
             app:layout_constraintEnd_toStartOf="@+id/diasel_layout"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
@@ -109,6 +111,7 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/edit_petrol"
                 android:inputType="numberDecimal"
                 android:hint="Petrol"
         />
@@ -136,6 +139,7 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/edit_diesel"
                 android:hint="Diesel"
                 android:inputType="numberDecimal"
         />
@@ -162,6 +166,7 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/edit_gas"
                 android:hint="Gas"
                 android:inputType="numberDecimal"
         />
