--- a/app/src/main/res/layout/edit_station_prices.xml
+++ b/app/src/main/res/layout/edit_station_prices.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:orientation="vertical"
         android:background="#ffffff"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
 
     <com.google.android.material.textfield.TextInputLayout
@@ -15,18 +16,20 @@
             app:boxStrokeWidth="4dp"
             app:errorEnabled="true"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp" android:id="@+id/ti_title">
+            android:layout_marginStart="8dp"
+            android:id="@+id/ti_title">
 
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:focusable="false"
-                android:hint="Title"/>
+                android:hint="Title" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -42,15 +45,18 @@
             android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/ti_title" android:id="@+id/ti_address">
+            android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintTop_toBottomOf="@+id/ti_title"
+            android:id="@+id/ti_address">
 
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:focusable="false"
-                android:hint="Address"/>
+                android:hint="Address" />
     </com.google.android.material.textfield.TextInputLayout>
+
     <com.google.android.material.chip.Chip
             style="@style/Widget.MaterialComponents.Chip.Filter"
             android:layout_width="wrap_content"
@@ -60,9 +66,11 @@
 
             android:text="Petrol"
             app:chipStrokeWidth="2dp"
-            android:id="@+id/chip_petrol" android:layout_marginTop="16dp"
+            android:id="@+id/chip_petrol"
+            android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/ti_address"
-            app:layout_constraintStart_toStartOf="@+id/fuel_layout"/>
+            app:layout_constraintStart_toStartOf="@+id/fuel_layout" />
+
     <com.google.android.material.chip.Chip
             style="@style/Widget.MaterialComponents.Chip.Filter"
             android:layout_width="wrap_content"
@@ -74,7 +82,9 @@
             app:chipStrokeWidth="2dp"
             app:layout_constraintTop_toBottomOf="@+id/ti_address"
             android:id="@+id/chip_diesel"
-            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/diasel_layout"/>
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="@+id/diasel_layout" />
+
     <com.google.android.material.chip.Chip
             style="@style/Widget.MaterialComponents.Chip.Filter"
             android:layout_width="wrap_content"
@@ -86,8 +96,9 @@
             app:chipStrokeWidth="2dp"
             app:layout_constraintTop_toBottomOf="@+id/ti_address"
             android:id="@+id/chip_gas"
-            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/gas_layout"
-    />
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="@+id/gas_layout" />
+
     <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
@@ -103,8 +114,10 @@
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/chip_petrol"
             app:layout_constraintEnd_toStartOf="@+id/diasel_layout"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp">
 
 
@@ -113,8 +126,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/edit_petrol"
                 android:inputType="numberDecimal"
-                android:hint="Petrol"
-        />
+                android:hint="Petrol" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -131,9 +143,12 @@
             android:id="@+id/diasel_layout"
             app:layout_constraintTop_toTopOf="@+id/fuel_layout"
             app:layout_constraintBottom_toBottomOf="@+id/fuel_layout"
-            app:layout_constraintStart_toEndOf="@+id/fuel_layout" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/gas_layout"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp">
+            app:layout_constraintStart_toEndOf="@+id/fuel_layout"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/gas_layout"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp">
 
 
         <com.google.android.material.textfield.TextInputEditText
@@ -141,8 +156,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/edit_diesel"
                 android:hint="Diesel"
-                android:inputType="numberDecimal"
-        />
+                android:inputType="numberDecimal" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -158,8 +172,11 @@
             app:errorEnabled="true"
             android:id="@+id/gas_layout"
             app:layout_constraintBottom_toBottomOf="@+id/fuel_layout"
-            app:layout_constraintStart_toEndOf="@+id/diasel_layout" android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+            app:layout_constraintStart_toEndOf="@+id/diasel_layout"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp">
 
 
@@ -168,8 +185,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/edit_gas"
                 android:hint="Gas"
-                android:inputType="numberDecimal"
-        />
+                android:inputType="numberDecimal" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -185,7 +201,9 @@
             app:icon="@drawable/ic_add_black_24dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
-            app:layout_constraintHorizontal_bias="0.919" android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintHorizontal_bias="0.919"
+            android:layout_marginBottom="32dp"
+            app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
