--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,7 +1,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
 
     <LinearLayout
             android:orientation="vertical"
@@ -12,11 +12,12 @@
             android:paddingRight="24dp"
             android:focusableInTouchMode="true">
 
-        <ImageView android:src="@drawable/nearfuel"
-                   android:layout_width="wrap_content"
-                   android:layout_height="72dp"
-                   android:layout_marginBottom="24dp"
-                   android:layout_gravity="center_horizontal" />
+        <ImageView
+                android:src="@drawable/nearfuel"
+                android:layout_width="wrap_content"
+                android:layout_height="72dp"
+                android:layout_marginBottom="24dp"
+                android:layout_gravity="center_horizontal" />
 
         <!-- Email Label -->
         <com.google.android.material.textfield.TextInputLayout
@@ -24,12 +25,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp">
+
             <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/input_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
-                    android:hint="@string/hint_email"/>
+                    android:hint="@string/hint_email" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <!-- Password Label -->
@@ -38,12 +40,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp">
+
             <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/input_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
-                    android:hint="@string/hint_password"/>
+                    android:hint="@string/hint_password" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <ProgressBar
@@ -54,7 +57,7 @@
                 android:visibility="gone"
                 android:indeterminate="false"
 
-        />
+                />
 
         <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_login"
@@ -63,15 +66,16 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="24dp"
                 android:padding="12dp"
-                android:text="@string/login"/>
+                android:text="@string/login" />
 
-        <TextView android:id="@+id/link_sign_up"
-                  android:layout_width="fill_parent"
-                  android:layout_height="wrap_content"
-                  android:layout_marginBottom="24dp"
-                  android:text="@string/no_account"
-                  android:gravity="center"
-                  android:textSize="16sp"/>
+        <TextView
+                android:id="@+id/link_sign_up"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="24dp"
+                android:text="@string/no_account"
+                android:gravity="center"
+                android:textSize="16sp" />
 
     </LinearLayout>
 </ScrollView>
