--- a/app/src/main/res/layout/gas_station_list_item.xml
+++ b/app/src/main/res/layout/gas_station_list_item.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -26,7 +25,7 @@
                 android:layout_margin="10dp"
                 app:layout_constraintTop_toTopOf="parent"
                 android:id="@+id/list_item_price"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent" />
 
         <TextView
                 android:layout_width="0dp"
@@ -39,8 +38,9 @@
                 app:layout_constraintStart_toEndOf="@+id/img_maps"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:id="@+id/list_item_title"
-                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/list_item_price"
-                android:layout_marginRight="8dp"/>
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toStartOf="@+id/list_item_price"
+                android:layout_marginRight="8dp" />
 
         <ImageView
                 android:layout_width="35dp"
@@ -50,14 +50,14 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:id="@+id/img_maps"
-                android:layout_margin="10dp"/>
-
+                android:layout_margin="10dp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <View android:layout_width="match_parent"
-          android:layout_height="1dp"
-          android:background="#F0F0F0"
-    />
+
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#F0F0F0" />
 
 </LinearLayout>
